creat block chis-victory, cheng btn

--- a/resources/views/pages/index.njk
+++ b/resources/views/pages/index.njk
@@ -14,7 +14,7 @@
                 <h2 class="history__title history__title__user history__text_white ">Добавить свою<br>историю</h2>
 	            <h2 class="history__title history__title__authorization history__text_white">Авторизируйся</h2>
                 <p class="history__text history__text_white">чтобы получить возможность<br> выиграть блюдо из твоих<br>воспоминаний</p>
-                <a class="simple__btn history__send history__send_white" href="#">Написать историю</a>
+                <a class="simple__btn simple__btn_transparent  history__send" href="#">Написать историю</a>
 	            <a href="#" class="simple__btn simple__social simple__btn_vk "><img src="/assets/images/vk-white.png" class="history__social vk">Вконтакте</a>
 	            <a href="#" class="simple__btn simple__social simple__btn_faceboock "><img src="/assets/images/faceboock-white.png" class="history__social faceboock">Faceboock</a>
                 <p class="history__text history__text_white history__text_top">Как мы будем определять<br> победителся конкурса?</p>
@@ -299,6 +299,7 @@
                 </div>
             </div>
         </div>
+	    {% include "shared/_victory-chois.njk" %}
     </div>
 	<div class="rolling__line"></div>
 </div>
