--- a/resources/views/shared/_footer.njk
+++ b/resources/views/shared/_footer.njk
@@ -17,7 +17,7 @@
 		                        <li class="sub-title-list__item">Экзотичность</li>
 		                        <li class="sub-title-list__item">Острота</li>
 	                        </ul>
-	                        <a class="sub-title__btn" href="#">Заказать блюдо</a>
+	                        <a class="sub-title__btn simple__btn simple__btn_success" href="#">Заказать блюдо</a>
                         </div>
                     </div>
                     <div class="slick-slide">
@@ -30,7 +30,7 @@
 			                    <li class="sub-title-list__item">Экзотичность</li>
 			                    <li class="sub-title-list__item">Острота</li>
 		                    </ul>
-		                    <a class="sub-title__btn " href="#">Заказать блюдо</a>
+		                    <a class="sub-title__btn simple__btn simple__btn_success" href="#">Заказать блюдо</a>
 	                    </div>
                     </div>
 	                <div class="slick-slide">
@@ -43,7 +43,7 @@
 			                    <li class="sub-title-list__item">Экзотичность</li>
 			                    <li class="sub-title-list__item">Острота</li>
 		                    </ul>
-		                    <a class="sub-title__btn" href="#">Заказать блюдо</a>
+		                    <a class="sub-title__btn simple__btn simple__btn_success" href="#">Заказать блюдо</a>
 	                    </div>
                     </div>
                 </div>
