--- a/resources/assets/stylesheets/sass/blocks/footer/footer.sass
+++ b/resources/assets/stylesheets/sass/blocks/footer/footer.sass
@@ -223,31 +223,9 @@ footer
       min-height: 75px
 
 .sub-title__btn
-  z-index: 999
-  width: 225px
-  height: 50px
-  display: block
-  margin: 15px auto
-  line-height: 45px
-  border: 1px solid #9ecb32
-  border-radius: 50px
-  outline: none
-  font-family: gothamPB
-  font-size: 17px
-  background: #9ecb32
-  color: #fff
-  transition: .3s
-  //-webkit-box-shadow: 0px 4px 20px 0px rgba(50, 50, 50, 0.5)
-  //-moz-box-shadow:    0px 4px 20px 0px rgba(50, 50, 50, 0.5)
-  //box-shadow:         0px 4px 20px 0px rgba(50, 50, 50, 0.5)
-
-  &:hover
-    background: transparent
-    transition: .3s
+  //z-index: 999
 
 
-  &:focus
-    outline: none
 
 .slick-slide:focus
   outline: none
@@ -267,6 +245,9 @@ footer
   height: 16px
   border-radius: 50px
   background-color: #9ecb32
+
+.footer-slider > .slick-dots
+  bottom: -45px
 
 
 
