--- a/resources/assets/stylesheets/sass/blocks/index.sass
+++ b/resources/assets/stylesheets/sass/blocks/index.sass
@@ -10,5 +10,6 @@
 @import "add-history/add-history"
 @import "full-history/full-history"
 @import "footer-copy/footer-copy"
+@import "victory-chois/victory-chois"
 
 
