small fixed new block

--- a/resources/assets/stylesheets/sass/blocks/victory-chois/victory-chois.sass
+++ b/resources/assets/stylesheets/sass/blocks/victory-chois/victory-chois.sass
@@ -1,11 +1,13 @@
 .victory-chois
   position: relative
   display: none
-  //text-align: center
   width: 830px
   text-align: center
   padding-top: 125px
   padding-left: 0px
+
+  &_active
+    display: block
 
   &__picture
     display: flex
@@ -25,11 +27,13 @@
 
 
     &_right
-      right: 5%
+      right: 10%
       //float: left
-      width: 30%
+      width: 25%
       background: url("../../images/dottet-victory-chois_left.png") no-repeat
       background-position-x: -150px
+
+
 
 .victory__title_left
   padding-left: 0
