--- a/resources/assets/stylesheets/sass/blocks/footer/footer.sass
+++ b/resources/assets/stylesheets/sass/blocks/footer/footer.sass
@@ -23,13 +23,16 @@ footer
 .basil-first
   top: 28%  //28%
   right: 10%
+  width: 85px
+  height: 70px
+  background: url("../../images/basil-footer_second.png") no-repeat
 
   +media-1024
     right: 5%
 
   +media-768
     top: 30%
-    width: 60px
+    width: 67px
 
   +media-576
     top: 24%
@@ -37,6 +40,9 @@ footer
 .basil-second
   top: 55%
   left: 12%
+  width: 85px
+  height: 70px
+  background: url("../../images/basil-footer_first.png") no-repeat
 
   +media-860
     left: 10%
@@ -44,7 +50,7 @@ footer
   +media-768
     left: 7%
     top: 60%
-    width: 69px
+    width: 90px
 
   +media-576
     top: 52%
