--- a/resources/assets/stylesheets/sass/blocks/history-last/history-last.sass
+++ b/resources/assets/stylesheets/sass/blocks/history-last/history-last.sass
@@ -12,7 +12,7 @@
     padding-bottom: 0
 
   +media-576
-    padding-bottom: 65px
+    padding-bottom: 35px //65
 
   &__titile
     text-align: center
