--- a/resources/assets/stylesheets/sass/blocks/wrapper/index.sass
+++ b/resources/assets/stylesheets/sass/blocks/wrapper/index.sass
@@ -20,7 +20,7 @@ a:hover, a:focus
 
   +media-576
     padding-top: 620px
-    padding-bottom: 55px
+    padding-bottom: 0px //55
 
 .history-create
   position: relative
@@ -219,6 +219,9 @@ a:hover, a:focus
     +media-1105
       font-size: 40px
 
+    +media-992
+      padding-top: 45px
+
     +media-320
       font-size: 30px
 
@@ -310,8 +313,9 @@ a:hover, a:focus
     left: 12%
 
   +media-720
-    width: 75px
-    bottom: 40%
+    width: 85px
+    bottom: 41%
+    left: 15%
 
   +media-685
     bottom: 46%
@@ -342,7 +346,7 @@ a:hover, a:focus
 
   +media-685
     right: 10%
-    bottom: 47%
+    top: 46%
 
   +media-576
     display: none
