--- a/resources/views/pages/index.njk
+++ b/resources/views/pages/index.njk
@@ -16,7 +16,7 @@
                 <p class="history__text history__text_white">чтобы получить возможность<br> выиграть блюдо из твоих<br>воспоминаний</p>
                 <a class="simple__btn simple__btn_transparent  history__send" href="#">Написать историю</a>
 	            <a href="#" class="simple__btn simple__social simple__btn_vk "><img src="/assets/images/vk-white.png" class="history__social vk">Вконтакте</a>
-	            <a href="#" class="simple__btn simple__social simple__btn_faceboock "><img src="/assets/images/faceboock-white.png" class="history__social faceboock">Faceboock</a>
+	            <a href="#" class="simple__btn simple__social simple__btn_facebook "><img src="/assets/images/faceboock-white.png" class="history__social faceboock">Facebook</a>
                 <p class="history__text history__text_white history__text_top">Как мы будем определять<br> победителся конкурса?</p>
                 <a class="simple__btn history__chois history__text_white" href="#">Протокол выбора</a>
 	            <p class="history__text history__text_white history__confirmations">Авторизовавшись вы даете<br> свое соглашение на <a class="confirmations" href="#">обработку<br> персональных данных</a></p>
