--- a/resources/views/shared/_footer.njk
+++ b/resources/views/shared/_footer.njk
@@ -1,8 +1,10 @@
 <footer data-aos="fade-up" data-aos-delay="120" data-aos-duration="1000">
     <div class="container">
         <div id="emotions" class="emotions">
-	        <img class="basil basil-first" src="/assets/images/basil-footer_second.png">
-	        <img class="basil basil-second" src="/assets/images/basil-footer_first.png">
+	        <div class="basil basil-first"></div>
+	        {#src="/assets/images/basil-footer_second.png"#}
+	        <div class="basil basil-second" ></div>
+	        {#src="/assets/images/basil-footer_first.png"#}
             <h1 class="emotions__title">Какие эмоции мы хотим вызвать у наших гостей?</h1>
             <div class="emotions-slider">
                 <div class="footer-slider slider single-item one-time">
@@ -62,9 +64,9 @@
 					<a class="contact-info__item contact-info__item_hover_disable" href="#">Разработка сайта: <span class="contact-info__item_success"> Rocket Science</span></a>
 				</div>
 				<div class="footer-social">
-					<a class="footer-social__item" href=""><img src="/assets/images/footer-vk.png" alt="vkontakte"></a>
-					<a class="footer-social__item" href=""><img src="/assets/images/footer-faceboock.png" alt="facebook"></a>
-					<a class="footer-social__item" href=""><img src="/assets/images/footer-insta.png" alt="instagram"></a>
+					<a class="footer-social__item" href=""><img class="footer-social__picture" src="/assets/images/vk-sm.png" alt="vkontakte"></a>
+					<a class="footer-social__item" href=""><img class="footer-social__picture" src="/assets/images/facebook-sm.png" alt="facebook"></a>
+					<a class="footer-social__item" href=""><img class="footer-social__picture" src="/assets/images/instagram-sm.png" alt="instagram"></a>
 				</div>
 				<div class="copyright">
 					<span class="contact-info__item_hover_disable">&copy; 2018 Кафе &laquo; Piu Del Cibo &raquo;</span>
