--- a/resources/assets/stylesheets/sass/blocks/footer-copy/footer-copy.sass
+++ b/resources/assets/stylesheets/sass/blocks/footer-copy/footer-copy.sass
@@ -73,6 +73,9 @@
     margin-left: 7px
     margin-right: 7px
 
+  &__picture
+    width: 46px
+
 .copyright
   text-align: center
   padding-top: 15px
