--- a/resources/assets/stylesheets/sass/blocks/simple-btn/simpe-btn.sass
+++ b/resources/assets/stylesheets/sass/blocks/simple-btn/simpe-btn.sass
@@ -94,7 +94,7 @@
     border-color: #4795d8
     margin-bottom: 15px
 
-  &_faceboock
+  &_facebook
     color: #fff
     background: #0054a6
     border-color: #0054a6
