add smooth scroll, fixed parallax, fixed webpack load css, fixed init animation

--- a/resources/assets/stylesheets/sass/blocks/victory/victory.sass
+++ b/resources/assets/stylesheets/sass/blocks/victory/victory.sass
@@ -1,6 +1,7 @@
 .victory
   background: url("../../images/bg-main.png") no-repeat
   background-position-y: 30px
+  background-position-x: -20px
   position: relative
   min-height: 700px
   padding-left: 0
@@ -71,7 +72,7 @@
   position: absolute
 
   &__main__one
-    top: 18%
+    top: 35%
     right: 32%
 
     +media-1105
@@ -102,7 +103,7 @@
 
   &__main__second
     left: 14%
-    top: 47%
+    top: 83%
 
     +media-1600
       left: 12%
@@ -137,7 +138,7 @@
 
   &__main__third
     right: 35%
-    top: 69%
+    top: 100%
 
     +media-1600
       right: 34%
