--- a/resources/views/pages/index.njk
+++ b/resources/views/pages/index.njk
@@ -243,9 +243,9 @@
 
 <div id="victory" class="container-fluid victory" data-aos="fade-up" data-aos-delay="120" data-aos-duration="1000">
 	{#absolut basil#}
-	<img class="basil basil__main basil__main__one" src="/assets/images/bsil-last-main_first.png">
-	<img class="basil basil__main basil__main__second" src="/assets/images/basil-last-main_second.png">
-	<img class="basil basil__main basil__main__third" src="/assets/images/basil-last-main_third.png">
+	<img class="basil basil__main basil__main__one js-rellax-obj" data-rellax-speed="1" src="/assets/images/bsil-last-main_first.png">
+	<img class="basil basil__main basil__main__second js-rellax-obj" data-rellax-speed="2" src="/assets/images/basil-last-main_second.png">
+	<img class="basil basil__main basil__main__third js-rellax-obj" data-rellax-speed="1.5" src="/assets/images/basil-last-main_third.png">
 	{##}
     <div class="container">
         <div class="victory-concurs">
