--- a/resources/views/shared/_footer.njk
+++ b/resources/views/shared/_footer.njk
@@ -1,9 +1,9 @@
 <footer data-aos="fade-up" data-aos-delay="120" data-aos-duration="1000">
     <div class="container">
         <div id="emotions" class="emotions">
-	        <div class="basil basil-first"></div>
+	        <div class="basil basil-first js-rellax-obj" data-rellax-speed="1"></div>
 	        {#src="/assets/images/basil-footer_second.png"#}
-	        <div class="basil basil-second" ></div>
+	        <div class="basil basil-second js-rellax-obj" data-rellax-speed="1"></div>
 	        {#src="/assets/images/basil-footer_first.png"#}
             <h1 class="emotions__title">Какие эмоции мы хотим вызвать у наших гостей?</h1>
             <div class="emotions-slider">
