--- a/resources/views/shared/_header.njk
+++ b/resources/views/shared/_header.njk
@@ -1,6 +1,6 @@
 <header class="page--header">
-    <img class="sheet sheet__one" src="/assets/images/sheets-one.png">
-    <img class="sheet sheet__second" src="/assets/images/sheets-second.png">
+    <img class="sheet sheet__one js-rellax-obj" data-rellax-speed="2" src="/assets/images/sheets-one.png">
+    <img class="sheet sheet__second js-rellax-obj" data-rellax-speed="2" src="/assets/images/sheets-second.png">
     <div class="container">
         {% include "shared/_nav-header.njk" %}
 	    {% include "shared/_nav-header-mobile.njk" %}
@@ -37,6 +37,6 @@
             </div>
         </div>
     </div>
-    <img class="sheet sheet__third" src="/assets/images/sheets-third.png">
-    <img class="sheet sheet__four" src="/assets/images/sheets-four.png">
+    <img class="sheet sheet__third js-rellax-obj" data-rellax-speed="2" src="/assets/images/sheets-third.png">
+    <img class="sheet sheet__four js-rellax-obj" data-rellax-speed="2" src="/assets/images/sheets-four.png">
 </header>
