fixed media sheet

--- a/resources/assets/stylesheets/sass/blocks/footer/footer.sass
+++ b/resources/assets/stylesheets/sass/blocks/footer/footer.sass
@@ -30,12 +30,15 @@ footer
   +media-1024
     right: 5%
 
+  +media-992
+    top: 69%
+
   +media-768
-    top: 30%
+    top: 65%
     width: 67px
 
   +media-576
-    top: 24%
+    top: 80%
 
 .basil-second
   top: 97%
@@ -49,14 +52,14 @@ footer
 
   +media-768
     left: 7%
-    top: 60%
+    top: 98%
     width: 90px
 
   +media-576
-    top: 52%
+    top: 110%
 
   +media-500
-    top: 50%
+    top: 107%
 
   +media-356
     left: 3%
