--- a/resources/assets/stylesheets/sass/blocks/victory/victory.sass
+++ b/resources/assets/stylesheets/sass/blocks/victory/victory.sass
@@ -29,7 +29,7 @@
     background-position-y: 35px
 
   +media-640
-    background-position-x: 0px
+    background-position-x: -20px
 
 
 
@@ -75,27 +75,34 @@
     top: 35%
     right: 32%
 
+    +media-1600
+      top: 48%
+
     +media-1105
       right: 15%
+      top: 45%
 
     +media-1024
       right: 20%
 
     +media-992
-      right: 10%
-      top: 10%
+      right: 15%
+      top: 54%
 
     +media-768
       width: 10vw
-      top: 12%
+      top: 55%
       right: 21%
 
     +media-660
       right: 10%
 
     +media-640
-      top: 20%
+      top: 50%
       right: 0%
+
+    +media-576
+      top: 66%
 
     +media-356
       top: 24%
@@ -107,17 +114,17 @@
 
     +media-1600
       left: 12%
-      top: 42%
+      top: 95%
 
     +media-1105
       left: 3%
-      top: 48%
+      top: 97%
 
     +media-992
-      top: 55%
+      top: 115%
 
     +media-860
-      top: 55%
+      top: 115%
 
     +media-1280
       left: 10%
@@ -125,11 +132,14 @@
     +media-768
       width: 9vw
       left: 5%
-      top: 58%
+      top: 115%
 
     +media-640
-      top: 18%
+      top: 78%
       left: 0
+
+    +media-576
+      top: 110%
 
     +media-356
       top: 24%
@@ -142,22 +152,22 @@
 
     +media-1600
       right: 34%
-      top: 65%
+      top: 100%
 
     +media-1105
       right: 20%
-      top: 69%
+      top: 100%
 
     +media-1024
       right: 24%
 
     +media-992
       right: 13%
-      top: 62%
+      top: 112%
 
     +media-768
       right: 21%
-      top: 65%
+      top: 111%
 
     +media-660
       right: 5%
@@ -263,7 +273,7 @@
   margin-top: 10px
 
   +media-860
-    width: 550px
+    width: 595px
 
   +media-800
     width: 595px
