destroy slick history, error counter!!!

--- a/resources/assets/stylesheets/sass/blocks/full-history/full-history.sass
+++ b/resources/assets/stylesheets/sass/blocks/full-history/full-history.sass
@@ -64,7 +64,10 @@
 
   +media-380
     padding-left: 0
-
+    
+.feed-full
+  +media-685
+    text-align: left
 
 .js-history-back
   float: right
@@ -84,4 +87,3 @@
 
 .full-history .mCS-dark.mCSB_scrollTools .mCSB_dragger:active .mCSB_dragger_bar
   background-color: #9ecb32
-
