--- a/resources/views/pages/index.njk
+++ b/resources/views/pages/index.njk
@@ -199,7 +199,7 @@
 						<a href="#" class="whatch__full js-history-back"><img class="arrow__back" src="/assets/images/left-arrow-green.png" alt="">Вернуться ко всем историям</a>
 					</div>
 					<div class="history-feed full-feed">
-						<p id="feed" class="feed">{{ history.text|safe }}
+						<p id="feed" class="feed feed-full">{{ history.text|safe }}
 						</p>
 					</div>
 				</div>
