media for victory-chois

--- a/resources/assets/stylesheets/sass/blocks/nav-header/nav-header.sass
+++ b/resources/assets/stylesheets/sass/blocks/nav-header/nav-header.sass
@@ -48,19 +48,19 @@ a
     +media-768
       font-size: 14px
 
-  &__link:active
-    &::after
-      position: absolute
-      content: ''
-      display: block
-      text-align: center
-      width: 10px
-      height: 10px
-      top: 65%
-      left: 40%
-
-      background: #9ecb32
-      border-radius: 50px
+  //&__link:active
+  //  &::after
+  //    position: absolute
+  //    content: ''
+  //    display: block
+  //    text-align: center
+  //    width: 10px
+  //    height: 10px
+  //    top: 65%
+  //    left: 40%
+  //
+  //    background: #9ecb32
+  //    border-radius: 50px
 
   &__link
     transition: .3s
