--- a/resources/views/pages/index.njk
+++ b/resources/views/pages/index.njk
@@ -1,7 +1,7 @@
 {% extends "layouts/layout.njk" %}
 
 {% block content %}
-<div class="container" data-aos="fade-up" data-aos-delay="120" data-aos-duration="1000" >
+<div  id="history" class="container" data-aos="fade-up" data-aos-delay="120" data-aos-duration="1000" >
     <!-- EXAMPLE REQUIRE IMG -->
     {#<img src="/assets/images/square.png" alt="">#}
     {#<div style="background-image: url(${require('/assets/images/square3.png')}); height: 100px"></div>#}
