--- a/resources/assets/stylesheets/sass/blocks/footer-copy/footer-copy.sass
+++ b/resources/assets/stylesheets/sass/blocks/footer-copy/footer-copy.sass
@@ -52,8 +52,15 @@
       color: #a3cd3c
       
       &:hover
-        color: #a3cd3c
-      
+        color: #759414
+
+      &:active
+        color: #759414
+
+      &:focus
+        color: #759414
+
+
     &_hover_disable
       font-family: gothamPR
       color: #919191
