--- a/resources/assets/stylesheets/sass/blocks/footer/footer.sass
+++ b/resources/assets/stylesheets/sass/blocks/footer/footer.sass
@@ -80,10 +80,13 @@ footer
   width: 65px
   z-index: 9999
   top: 33%
+  //transition: .3s
 
   &:hover
-    background: url("../../images/slide-arrow-left.png") no-repeat
+    //transition: .3s
+    background: url("../../images/hover-slide-arrow-left.png") no-repeat
   &:focus
+    //transition: .3s
     background: url("../../images/slide-arrow-left.png") no-repeat
 
   +media-640
