--- a/resources/assets/stylesheets/sass/blocks/simple-btn/simpe-btn.sass
+++ b/resources/assets/stylesheets/sass/blocks/simple-btn/simpe-btn.sass
@@ -46,7 +46,6 @@
     &:hover
       background: transparent
 
-
   +media-1070
     width: 210px
 
@@ -94,10 +93,16 @@
     border-color: #4795d8
     margin-bottom: 15px
 
+    &:hover
+      background: #4795B5
+
   &_facebook
     color: #fff
     background: #0054a6
     border-color: #0054a6
+
+    &:hover
+      background: #005490
 
 
     
