--- a/resources/views/pages/index.njk
+++ b/resources/views/pages/index.njk
@@ -292,9 +292,22 @@
             <div class="social">
                 <span class="social__news">Следите за новостями:</span>
                 <div class="social-logo">
-                    <div class="social-logo__item"><a class="social-logo__link" href=""><img class="social__img" src="/assets/images/vk-sm.png" alt="vkontakte"></a></div>
-                    <div class="social-logo__item"><a class="social-logo__link" href=""><img class="social__img" src="/assets/images/facebook-sm.png" alt="facebook"></a></div>
-                    <div class="social-logo__item"><a class="social-logo__link" href=""><img class="social__img" src="/assets/images/instagram-sm.png" alt="instagram"></a></div>
+                    <div class="social-logo__item">
+	                    <a class="social-logo__link" href="">
+		                    <img class="social__img social__img_vk
+" src="/assets/images/vk-sm.png" alt="vkontakte">
+	                    </a>
+                    </div>
+                    <div class="social-logo__item">
+	                    <a class="social-logo__link" href="">
+		                    <img class="social__img social__img_fb" src="/assets/images/facebook-sm.png" alt="facebook">
+	                    </a>
+                    </div>
+                    <div class="social-logo__item">
+	                    <a class="social-logo__link" href="">
+		                    <img class="social__img social__img_inst" src="/assets/images/instagram-sm.png" alt="instagram">
+	                    </a>
+                    </div>
 	                <img class="small-dotted" src="/assets/images/small-dotted.png" alt="dotted-line">
                 </div>
             </div>
