--- a/resources/views/shared/_footer.njk
+++ b/resources/views/shared/_footer.njk
@@ -64,9 +64,9 @@
 					<a class="contact-info__item contact-info__item_hover_disable" href="#">Разработка сайта: <span class="contact-info__item_success"> Rocket Science</span></a>
 				</div>
 				<div class="footer-social">
-					<a class="footer-social__item" href=""><img class="footer-social__picture" src="/assets/images/vk-sm.png" alt="vkontakte"></a>
-					<a class="footer-social__item" href=""><img class="footer-social__picture" src="/assets/images/facebook-sm.png" alt="facebook"></a>
-					<a class="footer-social__item" href=""><img class="footer-social__picture" src="/assets/images/instagram-sm.png" alt="instagram"></a>
+					<a class="footer-social__item" href=""><img class="footer-social__picture social__img_vk" src="/assets/images/vk-sm.png" alt="vkontakte"></a>
+					<a class="footer-social__item" href=""><img class="footer-social__picture social__img_fb" src="/assets/images/facebook-sm.png" alt="facebook"></a>
+					<a class="footer-social__item" href=""><img class="footer-social__picture social__img_inst" src="/assets/images/instagram-sm.png" alt="instagram"></a>
 				</div>
 				<div class="copyright">
 					<span class="contact-info__item_hover_disable">&copy; 2018 Кафе &laquo; Piu Del Cibo &raquo;</span>
