fixed hover adn animhov + cheng img to div

--- a/resources/assets/stylesheets/sass/blocks/footer-copy/footer-copy.sass
+++ b/resources/assets/stylesheets/sass/blocks/footer-copy/footer-copy.sass
@@ -50,15 +50,19 @@
     &_success
       font-family: gothamPBo
       color: #a3cd3c
+      transition: .3s
       
       &:hover
         color: #759414
+        transition: .3s
 
       &:active
         color: #759414
+        transition: .3s
 
       &:focus
         color: #759414
+        transition: .3s
 
 
     &_hover_disable
@@ -81,7 +85,8 @@
     margin-right: 7px
 
   &__picture
-    width: 46px
+    width: 45px
+    height: 45px
 
 .copyright
   text-align: center
