--- a/resources/assets/stylesheets/sass/blocks/footer/footer.sass
+++ b/resources/assets/stylesheets/sass/blocks/footer/footer.sass
@@ -80,13 +80,13 @@ footer
   width: 65px
   z-index: 9999
   top: 33%
-  //transition: .3s
+  transition: .3s
 
   &:hover
-    //transition: .3s
+    transition: .3s
     background: url("../../images/hover-slide-arrow-left.png") no-repeat
   &:focus
-    //transition: .3s
+    transition: .3s
     background: url("../../images/slide-arrow-left.png") no-repeat
 
   +media-640
@@ -233,11 +233,6 @@ footer
       display: block
       position: relative
       min-height: 75px
-
-.sub-title__btn
-  //z-index: 999
-
-
 
 .slick-slide:focus
   outline: none
