--- a/resources/assets/stylesheets/sass/blocks/header/header.sass
+++ b/resources/assets/stylesheets/sass/blocks/header/header.sass
@@ -2,8 +2,8 @@
   min-height: 950px
   position: relative
   background: url('../../images/bg-header.png') no-repeat
-  //background-size: cover
-  background-position-x: -50px
+  background-size: cover
+  //background-position-x: -50px
 
   +media-1735
     background-position-x: -100px
