--- a/resources/assets/stylesheets/sass/blocks/simple-btn/simpe-btn.sass
+++ b/resources/assets/stylesheets/sass/blocks/simple-btn/simpe-btn.sass
@@ -94,7 +94,9 @@
     margin-bottom: 15px
 
     &:hover
-      background: #4795B5
+      color: #fff
+      background: #4795A0
+      border-color: #4795A0
 
   &_facebook
     color: #fff
@@ -102,7 +104,9 @@
     border-color: #0054a6
 
     &:hover
-      background: #005490
+      color: #fff
+      background: #005470
+      border-color: #005470
 
 
     
