--- a/resources/views/pages/index.njk
+++ b/resources/views/pages/index.njk
@@ -196,7 +196,7 @@
 					<div class="full-history-content">
 						<img class="history__logo js__logo logo-first" src="{{ history.image }}">
 						<h5 id="logo-title" class="logo-title full__title">{{ history.title }}</h5>
-						<a href="#" class="whatch__full js-history-back"><img class="arrow__back" src="/assets/images/left-arrow-green.png" alt="">Вернуться ко всем историям</a>
+						<a href="#" class="whatch__full js-history-back"><div class="arrow__back"></div><span class="whatch__full_txt">Вернуться ко всем историям</span></a>
 					</div>
 					<div class="history-feed full-feed">
 						<p id="feed" class="feed feed-full">{{ history.text|safe }}
@@ -294,18 +294,18 @@
                 <div class="social-logo">
                     <div class="social-logo__item">
 	                    <a class="social-logo__link" href="">
-		                    <img class="social__img social__img_vk
-" src="/assets/images/vk-sm.png" alt="vkontakte">
+		                    <div class="social__img social__img_vk
+"></div>
 	                    </a>
                     </div>
                     <div class="social-logo__item">
 	                    <a class="social-logo__link" href="">
-		                    <img class="social__img social__img_fb" src="/assets/images/facebook-sm.png" alt="facebook">
+		                    <div class="social__img social__img_fb"></div>
 	                    </a>
                     </div>
                     <div class="social-logo__item">
 	                    <a class="social-logo__link" href="">
-		                    <img class="social__img social__img_inst" src="/assets/images/instagram-sm.png" alt="instagram">
+		                    <div class="social__img social__img_inst"></div>
 	                    </a>
                     </div>
 	                <img class="small-dotted" src="/assets/images/small-dotted.png" alt="dotted-line">
