--- a/resources/assets/stylesheets/sass/blocks/social/social.sass
+++ b/resources/assets/stylesheets/sass/blocks/social/social.sass
@@ -64,3 +64,30 @@
 
   +media-356
     width: 70px
+
+  &_vk
+    width: 70px
+    height: 70px
+    background: url("../../images/vk-sm.png") no-repeat
+    background-size: cover
+    transition: .3s
+
+    +hov-vk
+
+  &_fb
+    width: 70px
+    height: 70px
+    background: url("../../images/facebook-sm.png") no-repeat
+    background-size: cover
+    transition: .3s
+
+    +hov-fb
+
+  &_inst
+    width: 70px
+    height: 70px
+    background: url("../../images/instagram-sm.png") no-repeat
+    background-size: cover
+    transition: .3s
+
+    +hov-inst
