cheng social png to font awesome

--- a/resources/assets/stylesheets/sass/blocks/footer-copy/footer-copy.sass
+++ b/resources/assets/stylesheets/sass/blocks/footer-copy/footer-copy.sass
@@ -87,6 +87,9 @@
   &__picture
     width: 45px
     height: 45px
+    font-size: 18px
+    line-height: 45px
+    text-align: center
 
 .copyright
   text-align: center
