--- a/resources/assets/stylesheets/sass/helpers/mixins.sass
+++ b/resources/assets/stylesheets/sass/helpers/mixins.sass
@@ -45,20 +45,7 @@
   animation : translate1 3s infinite
 
 
-=hov-vk
+=hov-icon
   &:hover
     transition: .3s
-    background: url("../../images/hover-vk.png") no-repeat
-    background-size: cover
-
-=hov-fb
-  &:hover
-    transition: .3s
-    background: url("../../images/hover-fb.png") no-repeat
-    background-size: cover
-
-=hov-inst
-  &:hover
-    transition: .3s
-    background: url("../../images/hover-inst.png") no-repeat
-    background-size: cover
+    color: #759414
