--- a/resources/views/shared/_footer.njk
+++ b/resources/views/shared/_footer.njk
@@ -64,9 +64,9 @@
 					<a class="contact-info__item contact-info__item_hover_disable" href="#">Разработка сайта: <span class="contact-info__item_success"> Rocket Science</span></a>
 				</div>
 				<div class="footer-social">
-					<a class="footer-social__item" href=""><div class="footer-social__picture social__img_vk social__img_sm"></div></a>
-					<a class="footer-social__item" href=""><div class="footer-social__picture social__img_fb"></div></a>
-					<a class="footer-social__item" href=""><div class="footer-social__picture social__img_inst"></div></a>
+					<a class="footer-social__item" href=""><div class="footer-social__picture social__img"><i class="icon-vkontakte"></i></div></a>
+					<a class="footer-social__item" href=""><div class="footer-social__picture social__img"><i class="icon-facebook"></i></div></a>
+					<a class="footer-social__item" href=""><div class="footer-social__picture social__img"><i class="icon-instagram"></i></div></a>
 				</div>
 				<div class="copyright">
 					<span class="contact-info__item_hover_disable">&copy; 2018 Кафе &laquo; Piu Del Cibo &raquo;</span>
