--- a/resources/views/shared/_nav-header.njk
+++ b/resources/views/shared/_nav-header.njk
@@ -2,8 +2,9 @@
 	<ul class="menu-content">
 		<li class=" menu-content__item" data-aos="fade-right" data-aos-duration="600" ><a class="menu-content__link" href="#" >Главная</a></li>
 		<li class=" menu-content__item" data-aos="fade-right" data-aos-duration="600" ><a class="menu-content__link" href="#history" >Ваши истории</a></li>
-		<li class=" menu-content__item menu-content__logo" data-aos="fade-down" data-aos-duration="600"><a href="#"><img class="logo" src="/assets/images/nav-header.png" alt="logo"></a></li>
+		<li class=" menu-content__item menu-content__logo" data-aos="fade-down" data-aos-duration="600"><a class="logo__location" href="#"><img class="logo" src="/assets/images/nav-header.png" alt="logo"></a></li>
 		<li class=" menu-content__item" data-aos="fade-left" data-aos-duration="600" ><a class="menu-content__link" href="#victory" >Результаты</a></li>
 		<li class=" menu-content__item" data-aos="fade-left" data-aos-duration="600" ><a class="menu-content__link" href="#emotions" >Готовим с эмоцией</a></li>
 	</ul>
+
 </div>
