--- a/resources/views/pages/index.njk
+++ b/resources/views/pages/index.njk
@@ -294,18 +294,22 @@
                 <div class="social-logo">
                     <div class="social-logo__item">
 	                    <a class="social-logo__link" href="">
-		                    <div class="social__img social__img_vk
-"></div>
+		                    <div class="social__img
+"><i class="icon-vkontakte "></i></div>
 	                    </a>
                     </div>
                     <div class="social-logo__item">
 	                    <a class="social-logo__link" href="">
-		                    <div class="social__img social__img_fb"></div>
+		                    <div class="social__img ">
+			                    <i class="icon-facebook"></i>
+		                    </div>
 	                    </a>
                     </div>
                     <div class="social-logo__item">
 	                    <a class="social-logo__link" href="">
-		                    <div class="social__img social__img_inst"></div>
+		                    <div class="social__img ">
+			                    <i class="icon-instagram"></i>
+		                    </div>
 	                    </a>
                     </div>
 	                <img class="small-dotted" src="/assets/images/small-dotted.png" alt="dotted-line">
