cheng opt awesom

--- a/resources/assets/stylesheets/sass/core/_fonts.sass
+++ b/resources/assets/stylesheets/sass/core/_fonts.sass
@@ -34,4 +34,13 @@
   font-weight: normal
   font-style: normal
 
-
+@font-face
+  font-family: 'fontello'
+  src: url('../../fonts/fontello.eot?14660387')
+  src: url('../../fonts/fontello.eot?14660387#iefix') format('embedded-opentype'),
+  url('../../fonts/fontello.woff2?14660387') format('woff2'),
+  url('../../fonts/fontello.woff?14660387') format('woff'),
+  url('../../fonts/fontello.ttf?14660387') format('truetype'),
+  url('../../fonts/fontello.svg?14660387#fontello') format('svg')
+  font-weight: normal
+  font-style: normal
