--- a/resources/assets/stylesheets/sass/blocks/index.sass
+++ b/resources/assets/stylesheets/sass/blocks/index.sass
@@ -11,6 +11,7 @@
 @import "full-history/full-history"
 @import "footer-copy/footer-copy"
 @import "victory-chois/victory-chois"
+@import "fawesome/fawesome"
 
 
 
