--- a/resources/views/layouts/layout.njk
+++ b/resources/views/layouts/layout.njk
@@ -26,7 +26,7 @@
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
     <link rel="icon" type="image/png" href="favicon-128.png" sizes="128x128" />
 
-    <link rel="stylesheet" href="../../assets/images/fontello-c1fa6708/css/fontello.css">
+    {#<link rel="stylesheet" href="../../assets/images/fontello-c1fa6708/css/fontello.css">#}
 
     <meta name="application-name" content="&nbsp;"/>
     <meta name="msapplication-TileColor" content="#FFFFFF" />
