--- a/resources/assets/stylesheets/sass/blocks/history-last/history-last.sass
+++ b/resources/assets/stylesheets/sass/blocks/history-last/history-last.sass
@@ -313,20 +313,18 @@
   z-index: 2
   position: absolute
   display: block
-  background: url("../../images/left-arrow-green.png") no-repeat
+  //background: url("../../images/left-arrow-green.png") no-repeat
 
-  width: 25px
-  height: 25px
-  margin-top: 25px
+  width: 30px
+  height: 40px
+  //margin-top: 25px
   margin-left: 10px
   margin-right: 10px
   transition: .3s
+  font-size: 25px
+  color: #9ecb33
 
-
-  &:hover
-    cursor: pointer
-    background: url("../../images/hover-arrow-left.png") no-repeat
-    transition: .3s
+  +hov-icon
 
 
   +media-576
@@ -350,8 +348,8 @@
     left: 33%
 
 .history__next
-  transform: rotate(-180deg)
-  transform-origin: 50% 20%
+  //transform: rotate(-180deg)
+  //transform-origin: 50% 20%
   right: 42%
   bottom: -37px
 
