fixed error and bug

--- a/resources/assets/stylesheets/sass/blocks/full-history/full-history.sass
+++ b/resources/assets/stylesheets/sass/blocks/full-history/full-history.sass
@@ -38,10 +38,9 @@
 
 
 .arrow__back
-  background: url("../../images/left-arrow-green.png") no-repeat
-  //padding-right: 15px
   height: 15px
   width: 40px
+  font-size: 21px
 
 .full__history__logo
   +media-685
@@ -86,9 +85,6 @@
 
   &:hover
     transition: .3s
-    .arrow__back
-      transition: .3s
-      background: url("../../images/hover-arrow-left.png") no-repeat
       
 
 .full-history .mCS-dark.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar
