--- a/resources/assets/stylesheets/sass/blocks/history-last/history-last.sass
+++ b/resources/assets/stylesheets/sass/blocks/history-last/history-last.sass
@@ -255,10 +255,12 @@
     color: #759414
     transition: .3s
 
-
   &:focus
     color: #759414
     outline: none
+
+  &_txt
+    padding-top: 4px
 
 .full__fid
   display: none
@@ -313,7 +315,6 @@
   z-index: 2
   position: absolute
   display: block
-  //background: url("../../images/left-arrow-green.png") no-repeat
 
   width: 30px
   height: 40px
