--- a/resources/views/pages/index.njk
+++ b/resources/views/pages/index.njk
@@ -15,8 +15,8 @@
 	            <h2 class="history__title history__title__authorization history__text_white">Авторизируйся</h2>
                 <p class="history__text history__text_white">чтобы получить возможность<br> выиграть блюдо из твоих<br>воспоминаний</p>
                 <a class="simple__btn simple__btn_transparent  history__send" href="#">Написать историю</a>
-	            <a href="#" class="simple__btn simple__social simple__btn_vk "><img src="/assets/images/vk-white.png" class="history__social vk">Вконтакте</a>
-	            <a href="#" class="simple__btn simple__social simple__btn_facebook "><img src="/assets/images/faceboock-white.png" class="history__social faceboock">Facebook</a>
+	            <a href="#" class="simple__btn simple__social simple__btn_vk "><i class="icon-vkontakte history__social vk"></i>Вконтакте</a>
+	            <a href="#" class="simple__btn simple__social simple__btn_facebook "><i class="icon-facebook history__social faceboock"></i>Facebook</a>
                 <p class="history__text history__text_white history__text_top">Как мы будем определять<br> победителся конкурса?</p>
                 <a class="simple__btn history__chois history__text_white" href="#">Протокол выбора</a>
 	            <p class="history__text history__text_white history__confirmations">Авторизовавшись вы даете<br> свое соглашение на <a class="confirmations" href="#">обработку<br> персональных данных</a></p>
@@ -196,7 +196,7 @@
 					<div class="full-history-content">
 						<img class="history__logo js__logo logo-first" src="{{ history.image }}">
 						<h5 id="logo-title" class="logo-title full__title">{{ history.title }}</h5>
-						<a href="#" class="whatch__full js-history-back"><div class="arrow__back"></div><span class="whatch__full_txt">Вернуться ко всем историям</span></a>
+						<a href="#" class="whatch__full js-history-back"><div class="arrow__back"><i class="icon-left"></i></div><span class="whatch__full_txt">Вернуться ко всем историям</span></a>
 					</div>
 					<div class="history-feed full-feed">
 						<p id="feed" class="feed feed-full">{{ history.text|safe }}
